Updated homepage URL

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,7 @@
 	"name": "Conflict Resolution",
 	"description": "A plugin that makes process of resolving conflicts easier.",
 	"author": "Ahmed Alwasifey",
-	"homepage_url": "https://github.com/joplin/plugin-conflict-resolution",
+	"homepage_url": "https://discourse.joplinapp.org/t/plugin-conflict-resolution/19204",
 	"repository_url": "https://github.com/joplin/plugin-conflict-resolution",
 	"keywords": []
 }
